# quantr

./: app.py  pyproject.toml
quantr/views/: candles.py
tests/: test_quantr.py
