[tool.poetry]
name = "quantr"
version = "0.1.0"
description = ""
authors = ["Taylor Young <y.taylor@rocketmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
dash = "^1.20.0"
tdapi = {git = "https://github.com/carpe-astra/tdapi.git"}
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
